--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
     <!--Copyright-->
     <div class="footer-copyright">
         <div class="container-fluid">
-            An initiative by the <a href="https://innovatesac.org/" target="_blank">City of Sacramento Mayor's Office for Innovation & Entrepreneurship</a>
+            An initiative by the <a href="http://www.cityofsacramento.org/Economic-Development" target="_blank">City of Sacramento Office of Innovation & Economic Development</a>
         </div>
     </div>
     <!--/Copyright-->
