--- a/_includes/team.html
+++ b/_includes/team.html
@@ -16,10 +16,9 @@
                           <h1 class="py-3 font-weight-bold">
                               <strong>Meet the Team</strong>
                           </h1>
-                          <p class="pb-3">The Mayor's Office for Innovation and Entrepreneurship (MOFIE) was formed in 2016 to adopt innovative
+                          <p class="pb-3">The City's Innovation Team grew out of the Mayor's Office for Innovation and Entrepreneurship (MOFIE), which was formed in 2016 to adopt innovative
                               best learnings from around the country and to serve as a liaison between City Hall, the Mayor's Office,
-                              and Sacramento's innovation community. MOFIE works within the Office of Economic Development to foster a
-                              sustainable ecosystem for innovation.
+                              and Sacramento's innovation community. To better align City resources, the Innovation Team joined the City Manager's Office of Innovation and Economic Development (OIED) in Spring 2018.
                           </p>
                       </div>
                   </div>
@@ -45,7 +44,7 @@
             <p>
                 <a class="font-weight-bold dark-grey-text">Chief Innovation Officer</a></p>
             <p class="grey-text">Louis Stewart currently serves as the City of Sacramento's first
-              Chief Innovation Officer within the Mayor's Office for Innovation and Entrepreneurship.
+              Chief Innovation Officer.
               Mr. Stewart is responsible for the development of a broad citywide portfolio of programs
               and initiatives that support, drive, influence and build upon the City of Sacramento's
               economic inclusion philosophy, business development strategies, goals, customer relationships
@@ -100,15 +99,14 @@
                 <strong>Ash Roughani</strong>
             </h3>
             <p>
-                <a class="font-weight-bold dark-grey-text">Bureaucracy Hacker</a></p>
-            <p class="grey-text">Ash Roughani is Bureaucracy Hacker at the City of Sacramento Mayor’s Office for Innovation & 
-              Entrepreneurship (MOFIE) where he manages the Creative Economy Pilot Project, in addition to other initiatives. 
-              Ash is a systems thinker who synthesizes his deep knowledge of public policy and business strategy with technical 
-              skills in product management, web development, human centered design, and community building. Prior to his role at 
-              the City, Ash founded and launched several civic technology startups, including Public Innovation, Code for Sacramento, 
-              and Delivery Unit. He was formerly Senior Associate at California Forward, served as an Executive Fellow in the 
-              Schwarzenegger Administration. Ash holds a Master of Public Policy and Administration degree from Sacramento State, 
-              a BA in Philosophy from UC Santa Barbara, and completed half of the MBA program at the UC Davis Graduate School of 
+                <a class="font-weight-bold dark-grey-text">Staff Aide</a></p>
+            <p class="grey-text">Ash Roughani is Staff Aide and manages City grant programs such as the Creative Economy Pilot Project, in addition to other initiatives.
+              Ash is a systems thinker who synthesizes his deep knowledge of public policy and business strategy with technical
+              skills in product management, web development, human centered design, and community building. Prior to his role at
+              the City, Ash founded and launched several civic technology startups, including Public Innovation, Code for Sacramento,
+              and Delivery Unit. He was formerly Senior Associate at California Forward, served as an Executive Fellow in the
+              Schwarzenegger Administration. Ash holds a Master of Public Policy and Administration degree from Sacramento State,
+              a BA in Philosophy from UC Santa Barbara, and completed half of the MBA program at the UC Davis Graduate School of
               Management.</p>
 
             <a class="btn btn-primary btn-md" href="https://twitter.com/roughani"><i class="fa fa-twitter"></i> @roughani</a>
@@ -139,9 +137,9 @@
             </h3>
             <p>
                 <a class="font-weight-bold dark-grey-text">Content Strategist</a></p>
-            <p class="grey-text">Hi, my name is Aubree Taylor. I am informally known as MOFIE's Cat Herder,
+            <p class="grey-text">Hi, my name is Aubree Taylor. I am informally known as a Cat Herder,
               which means I chase around Louis and Ash and try to make everything make sense on the back end.
-              I am more formally known as MOFIE's content strategist and, with that, have other, more dangerous
+              I am more formally known as content strategist and, with that, have other, more dangerous
               cats to wrangle. I have been with the City of Sacramento since 2014 and got my start in the
               Mayor's Office serving Sacramento through the lens of Constituent Affairs. I earned my bachelor
               of science degree in Materials Science & Engineering from the University of California, Merced
