--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,7 +13,6 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
                 <ul class="navbar-nav ml-auto">
                   <!-- Dropdown -->
-                  <a class="btn peach-gradient btn-rounded" href="/rails">2018 RAILS Program</a>
                   <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
                       <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
@@ -21,7 +20,7 @@
 
                           <a class="dropdown-item" href="/about/mayors-tech-council">Mayor's Tech Council</a>
                           <a class="dropdown-item" href="/video/innovation-city">Innovation Sacramento Series</a>
-                          <a class="dropdown-item" href="/mofie">Team Bios</a>
+                          <a class="dropdown-item" href="/team">Team Bios</a>
                           <a class="dropdown-item" href="https://innovatesac.gitbook.io/goals-objectives/">Goals & Objectives</a>
 
                       </div>
