--- a/_includes/home/focus-areas.html
+++ b/_includes/home/focus-areas.html
@@ -36,7 +36,7 @@
     <div class="col-md-6">
       <h4 class="feature-title text-center pt-5">Get Involved</h4>
       <p class="text-center">Interested in partnering with us? We're looking for organizations and individuals who can bring resources to the table.</p>
-      <a href="https://cityofsac.forms.fm/sutl" target="_blank" class="btn blue-gradient d-block mx-auto"><i class="fa fa-rocket"></i> Propose a Partnership</a>
+      <a href="https://goo.gl/forms/g5WBoWSvu07KG82f2" target="_blank" class="btn blue-gradient d-block mx-auto"><i class="fa fa-rocket"></i> Propose a Partnership</a>
       <!--/.Card-->
     </div>
 
