--- a/_includes/focus-areas/health-it-life-sciences.html
+++ b/_includes/focus-areas/health-it-life-sciences.html
@@ -9,7 +9,7 @@
       <div class="col-md-6 mx-auto">
         <iframe style="display: block; margin: auto;" width="560" height="315" src="https://www.youtube.com/embed/AO7XbqI6xCg?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <p class="text-center">
-          <a href="/pdf/aggie-squre.pdf" class="btn btn-primary">View Working Group Report</a>
+          <a href="/pdf/aggie-square.pdf" class="btn btn-primary">View Working Group Report</a>
         </p>
       </div>
       <div class="col-md-6 text-center text-md-left pr-md-5">
