--- a/_includes/focus-areas/food-systems.html
+++ b/_includes/focus-areas/food-systems.html
@@ -43,7 +43,7 @@
                   <p class="card-text-black">The Verde Innovation Network for Entrepreneurship (The VINE) is a connected community of innovators and resurces in sustainable food and agriculture technology</p>
                   <div class="card-footer">
                     <span class="float-right">
-                      <a href="https://thevine.io/" class="black-text d-flex justify-content-end"><h5>Read more <i class="fa fa-angle-double-right"></i></h5></a></span>
+                      <a href="https://thevine.io/" class="black-text d-flex justify-content-end"><h5>Learn more <i class="fa fa-angle-double-right"></i></h5></a></span>
                   </div>
                 </div>
               <!--Card-->
