updated page design

--- a/_includes/focus-areas/food-systems.html
+++ b/_includes/focus-areas/food-systems.html
@@ -7,64 +7,34 @@
     <!-- <h1 class="jumbotron-heading">{{ site.title }}</h1> -->
     <div class="card-body">
       <h1 class="page-heading text-center py-4">Partners</h1>
-      <!--Carousel Wrapper-->
-      <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
-        <!--Indicators-->
-        <ol class="carousel-indicators">
-          <li class="primary-color active" data-target="#multi-item-example" data-slide-to="0"></li>
-          <li class="primary-color" data-target="#multi-item-example" data-slide-to="1"></li>
-          <!-- <li class="primary-color" data-target="#multi-item-example" data-slide-to="2"></li> -->
-        </ol>
-        <!--Indicators-->
-        <!--Slides-->
-        <div class="carousel-inner" role="listbox">
-          <!--First slide-->
-          <div class="carousel-item active">
-            <div class="col-md-4">
-              <!--Card-->
-              <div class="card card-cascade narrower card-ecommerce">
-                <!--Card image-->
-                <div class="view overlay">
-                  <img src="/img/partners/the-vine.png" class="img-fluid" alt="sample photo">
-                  <a>
-                    <div class="mask waves-effect waves-light"></div>
-                  </a>
-                </div>
-                <!--Card image-->
-                <!--Card content-->
-                <div class="card-body text-center no-padding">
-                  <!--Category & Title-->
-                  <h4 class="card-title my-4">
-                    <strong>
-                      <a href="https://thevine.io/">The Verde Innovation Network for Entrepreneurship (The VINE)</a>
-                    </strong>
-                  </h4>
-                  <!--Description-->
-                  <p class="card-text-black">The Verde Innovation Network for Entrepreneurship (The VINE) is a connected community of innovators and resurces in sustainable food and agriculture technology</p>
-                  <div class="card-footer">
-                    <span class="float-right">
-                      <a href="https://thevine.io/" class="black-text d-flex justify-content-end"><h5>Learn more <i class="fa fa-angle-double-right"></i></h5></a></span>
+      <hr>
+      <!--Grid row-->
+      <div class="row pt-5">
+
+          <!--Grid column-->
+          <div class="col-lg-6 col-xl-7 mb-3">
+
+              <!--Grid row-->
+              <div class="row mb-3">
+                  <div class="col-1 mr-1">
+                      <i class="fa fa-leaf fa-lg green-text"></i>
                   </div>
-                </div>
-              <!--Card-->
+                  <div class="col-10">
+                      <h3 class="feature-title font-bold">The Verde Innovation Network for Entrepreneurship (The VINE)</h3>
+                      <p class="grey-text">The Verde Innovation Network for Entrepreneurship (The VINE) is a connected community of innovators and resurces in sustainable food and agriculture technology</p>
+                  </div>
               </div>
-            </div>
+              <!--Grid row-->
           </div>
-          <!--First slide-->
-          <!--Second slide-->
-          <!-- <div class="carousel-item">
-            <div class="col-md-4">
-           </div>
-            <div class="col-md-4 clearfix d-none d-md-block">
-            </div>
-            <div class="col-md-4 clearfix d-none d-md-block">
-            </div>
-          </div> -->
-          <!--Second slide-->
-        </div>
-        <!--Slides-->
+          <!--Grid column-->
+          <!--Grid column-->
+          <div class="col-lg-6 col-xl-5 mb-3">
+              <!--Image-->
+              <img src="/img/partners/the-vine.png" alt="The VINE Network" class="img-fluid z-depth-2">
+          </div>
+          <!--Grid column-->
       </div>
-      <!--Carousel Wrapper-->
+      <!--Grid row-->
       <div class="excerpt">
         <h4 class="feature-title text-center pt-5">Get Involved</h4>
         <p class="text-center">Interested in partnering with us? We're looking for organizations and individuals who can bring resources to the table.</p>
