link added to the VINE

--- a/_includes/focus-areas/food-systems.html
+++ b/_includes/focus-areas/food-systems.html
@@ -22,6 +22,9 @@
                   <div class="col-10">
                       <h3 class="feature-title font-bold">The Verde Innovation Network for Entrepreneurship (The VINE)</h3>
                       <p class="grey-text">The Verde Innovation Network for Entrepreneurship (The VINE) is a connected community of innovators and resurces in sustainable food and agriculture technology</p>
+                      <p class="">
+                        <a href="https://thevine.io/" class="btn btn-primary">Visit Website</a>
+                      </p>
                   </div>
               </div>
               <!--Grid row-->
@@ -30,7 +33,7 @@
           <!--Grid column-->
           <div class="col-lg-6 col-xl-5 mb-3">
               <!--Image-->
-              <img src="/img/partners/the-vine.png" alt="The VINE Network" class="img-fluid z-depth-2">
+              <img src="/img/partners/the-vine.png" alt="The VINE Network" class="img-fluid z-depth-2" href="https://thevine.io/">
           </div>
           <!--Grid column-->
       </div>
