better meat and govtech update

--- a/_includes/focus-areas/food-systems.html
+++ b/_includes/focus-areas/food-systems.html
@@ -38,10 +38,43 @@
           <!--Grid column-->
       </div>
       <!--Grid row-->
+
+      <!--Grid row-->
+      <div class="row pt-5">
+        <!--Grid column-->
+        <div class="col-lg-6 col-xl-5 mb-3">
+            <!--Image-->
+            <img src="/img/partners/better-meat.png" alt="The Better Meat Co." class="img-fluid z-depth-2" href="https://www.bettermeat.co/">
+        </div>
+        <!--Grid column-->
+          <!--Grid column-->
+          <div class="col-lg-6 col-xl-7 mb-3">
+
+              <!--Grid row-->
+              <div class="row mb-3">
+                  <div class="col-1 mr-1">
+                      <i class="fa fa-cutlery fa-lg green-text"></i>
+                  </div>
+                  <div class="col-10">
+                      <h3 class="feature-title font-bold">The Better Meat Co.</h3>
+                      <p class="grey-text">Founded in early 2018 and based in Sacramento, The Better Meat Co. is a business-to-business company that helps institutional food sellers achieve their goals of culinary excellence by providing next-generation plant-based proteins for foodservice providers and meat processors to make their meat, in a word, better.</p>
+                      <p class="">
+                        <a href="/pdf/the-better-meat-co.pdf" class="btn btn-primary">View One-Pager</a>
+                        <a href="https://www.bettermeat.co" class="btn btn-primary">Visit Website</a>
+                      </p>
+                  </div>
+              </div>
+              <!--Grid row-->
+          </div>
+          <!--Grid column-->
+
+      </div>
+      <!--Grid column-->
+
       <div class="excerpt">
         <h4 class="feature-title text-center pt-5">Get Involved</h4>
-        <p class="text-center">Interested in partnering with us? We're looking for organizations and individuals who can bring resources to the table.</p>
-        <button type="button"   href="https://goo.gl/forms/g5WBoWSvu07KG82f2" target="_blank" class="btn blue-gradient d-block mx-auto"><i class="fa fa-rocket"></i> Propose a Partnership</a>
+        <p class="text-center">Interested in partnering with us? We want to know how you are working to co-develop Sacramento's innovation ecosystem</p>
+        <a href="/stories" class="btn blue-gradient"><i class="fa fa-rocket"></i> Tell us your story</a>
       </div>
 
     </div>
