--- a/_includes/home/main.html
+++ b/_includes/home/main.html
@@ -2,6 +2,10 @@
   <!--Section: Features v.1-->
 <section class="section feature-box">
 
+<hr>
+  <div class="embed-responsive embed-responsive-21by9">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/XGSZL397PSg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
     <!--Section heading-->
     <h2 class="section-heading h1 pt-4">A Living Lab</h2>
     <!--Section description-->
