--- a/_includes/innovation-grants/content.html
+++ b/_includes/innovation-grants/content.html
@@ -49,7 +49,7 @@
               mobility, health IT, and life science industries for startups and individuals in Sacramento.
               Grants will go toward establishing or expanding programming.
             </p>
-            <a class="btn btn-purple btn-rounded btn-md" href="/pdf/ecosystem-building.pdf"><i class="fa fa-clone left"></i> Learn more </a>
+            <a class="btn btn-purple btn-rounded btn-md" href="/sutl-grants/ecosystem-building"><i class="fa fa-clone left"></i> Learn more </a>
           </div>
         </div>
       </div>
@@ -90,18 +90,19 @@
       <div class="card card-image" style="background-image: url(/img/grants/growth.png);">
         <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4 rounded">
           <div>
-            <h6 class="pink-text">
-              <i class="fas fa-chart-pie"></i>
-              <strong> Anything Else </strong>
+            <h6 class="purple-text">
+              <i class="fa fa-sitemap"></i>
+              <strong> Competition </strong>
             </h6>
             <h3 class="py-3 font-weight-bold">
-              <strong>This is card title</strong>
+              <strong>Scaleup Growth Competition</strong>
             </h3>
-            <p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat,
-              laboriosam, voluptatem, optio vero odio nam sit officia accusamus minus error nisi architecto
-              nulla ipsum dignissimos. Odit sed qui, dolorum!
+            <p class="pb-3">The Scaleup Growth Competition is designed to help high-growth scale-ups
+              locate and grow in Sacramento. Funding will go toward determining a scale-up's fit in
+              the Sacramento community. Projects must consider social equity, plan to serve an underserved
+              community and/or address a social issue within Sacramento to be awarded funding.
             </p>
-            <a class="btn btn-pink btn-rounded btn-md"><i class="fas fa-clone left"></i> View project</a>
+            <a class="btn btn-purple btn-rounded btn-md"><i class="fa fa-clone left"></i> More info coming soon! </a>
           </div>
         </div>
       </div>
