--- a/_includes/innovation-grants/program.html
+++ b/_includes/innovation-grants/program.html
@@ -1,5 +1,5 @@
 <!-- Section: Features v.2 -->
-<section class="my-5">
+<section class="text-center my-5">
 
   <!-- Section heading -->
   <!--Icon-->
@@ -11,42 +11,42 @@
   <!-- Grid row -->
   <div class="row">
 
-<div class="col-md-6 mb-5">
-        <!-- Grid column -->
-        <div class="col-md-6">
-          <i class="fa fa-bullhorn blue-text fa-2x"></i>
-          <h4 class="font-weight-bold">Read the Guidelines</h4>
-          <p class="grey-text">Please read the guidelines before applying. If you have any questions, check out
-            the Workshops and FAQ.</p>
-          <a class="btn btn-primary btn-sm" href=/pdf/{{page.reference}}.pdf>Program Guidelines</a>
-        </div>
-        <!-- Grid column -->
-        </div>
+    <!-- Grid column -->
+    <div class="col-md-4">
 
-        <div class="col-md-6 mb-5">
+      <i class="fa fa-bullhorn fa-3x purple-text"></i>
+      <h5 class="font-weight-bold my-4">Read the Guidelines</h5>
+      <p class="grey-text mb-md-0 mb-5">Please read the guidelines before applying. If you have any questions, check out
+        the Workshops and FAQ.
+      </p>
+      <a class="btn btn-purple" href=/pdf/{{page.reference}}.pdf>Program Guidelines</a>
+    </div>
+    <!-- Grid column -->
 
-        <!-- Grid column -->
-        <div class="col-md-6">
-          <i class="fa fa-cogs pink-text fa-2x"></i>
-          <h4 class="font-weight-bold"> Workshops & FAQ </h4>
-          <p class="grey-text">Find out dates upcoming workshops and view recordings of past workshops.
-            Read through questions submitted by others and questions submitted during workshops. If your question
-          is not already answered, submit online</p>
-          <a class="btn btn-pink btn-sm">Workshops & FAQ</a>
-        </div>
-        <!-- Grid column -->
-        </div>
+    <!-- Grid column -->
+    <div class="col-md-4">
 
-        <div class="col-md-6 mb-5">
-        <!-- Grid column -->
-        <div class="col-md-6">
-          <i class="fa fa-groups fa-2x"></i>
-          <h4 class="font-weight-bold">Apply Now</h4>
-          <p class="grey-text">Ready to submit your application?</p>
-          <a class="btn btn-purple btn-sm">Go to application!</a>
-        </div>
-        <!-- Grid column -->
-        </div>
+      <i class="fa fa-cogs fa-3x purple-text"></i>
+      <h5 class="font-weight-bold my-4">Workshops & FAQ</h5>
+      <p class="grey-text mb-md-0 mb-5">Find out dates upcoming workshops and view recordings of past workshops.
+        Read through questions submitted by others and questions submitted during workshops. If your question
+      is not already answered, submit online.
+      </p>
+      <a class="btn btn-purple">Workshops & FAQ</a>
+
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-md-4">
+
+      <i class="fa fa-groups fa-3x purple-text"></i>
+      <h5 class="font-weight-bold my-4">Apply Now</h5>
+      <p class="grey-text mb-0">Ready to submit your application?
+      </p>
+      <a class="btn btn-purple" href="{{page.link}}">Go to application!</a>
+
+    </div>
 
   </div>
   <!-- Grid row -->
