--- a/_includes/innovation-grants/program.html
+++ b/_includes/innovation-grants/program.html
@@ -14,7 +14,7 @@
     <!-- Grid column -->
     <div class="col-md-4">
 
-      <i class="fa fa-bullhorn fa-3x purple-text"></i>
+      <i class="fa fa-book fa-3x purple-text"></i>
       <h5 class="font-weight-bold my-4">Read the Guidelines</h5>
       <p class="grey-text mb-md-0 mb-5">Please read the guidelines before applying. If you have any questions, check out
         the Workshops and FAQ.
@@ -26,9 +26,9 @@
     <!-- Grid column -->
     <div class="col-md-4">
 
-      <i class="fa fa-cogs fa-3x purple-text"></i>
+      <i class="fa fa-comments-o fa-3x purple-text"></i>
       <h5 class="font-weight-bold my-4">Workshops & FAQ</h5>
-      <p class="grey-text mb-md-0 mb-5">Find out dates upcoming workshops and view recordings of past workshops.
+      <p class="grey-text mb-md-0 mb-5">Find dates for upcoming workshops and links to recordings of past workshops.
         Read through questions submitted by others and questions submitted during workshops. If your question
       is not already answered, submit online.
       </p>
@@ -40,7 +40,7 @@
     <!-- Grid column -->
     <div class="col-md-4">
 
-      <i class="fa fa-groups fa-3x purple-text"></i>
+      <i class="fa fa-edit fa-3x purple-text"></i>
       <h5 class="font-weight-bold my-4">Apply Now</h5>
       <p class="grey-text mb-0">Ready to submit your application?
       </p>
