Grant Page Updates

--- a/_includes/innovation-grants/content.html
+++ b/_includes/innovation-grants/content.html
@@ -45,9 +45,9 @@
             <h3 class="py-3 font-weight-bold">
               <strong>Ecosystem Building Grants</strong>
             </h3>
-            <p class="pb-3">Ecosystem Building Grants are designed to build pipelines to the IoT, cybersecurity,
+            <p class="pb-3">Ecosystem Building Grants are designed to build workforce pipelines to the IoT, cybersecurity,
               mobility, health IT, and life science industries for startups and individuals in Sacramento.
-              Grants will go toward establishing or expanding programming.
+              Grants will go toward establishing or expanding programmingto build or strenthen these pipelines.
             </p>
             <a class="btn btn-purple btn-rounded btn-md" href="/sutl-grants/ecosystem-building"><i class="fa fa-clone left"></i> Learn more </a>
           </div>
@@ -68,9 +68,9 @@
             <h3 class="py-3 font-weight-bold">
               <strong>SUTL Ecosystem Marketing</strong>
             </h3>
-            <p class="pb-3">SUTL Ecosystem Marketing consists of three discrete solicitations along with
-              their respective scopes of work: SUTL Grant Program Documentation (RFP), National Marketing
-              Strategy for Scale-Up Competition (RFP), Co-Working Marketing Grants.
+            <p class="pb-3">SUTL Ecosystem Marketing consists of three discrete solicitations that focus on promoting
+              Sacramento's startup ecosystem along with their respective scopes of work: SUTL Grant Program Documentation
+              (RFP), National Marketing Strategy for Scale-Up Competition (RFP), Co-Working Marketing Grants.
             </p>
             <a class="btn btn-purple btn-rounded btn-md"><i class="fa fa-clone left"></i> More info coming soon! </a>
           </div>
@@ -99,8 +99,7 @@
             </h3>
             <p class="pb-3">The Scaleup Growth Competition is designed to help high-growth scale-ups
               locate and grow in Sacramento. Funding will go toward determining a scale-up's fit in
-              the Sacramento community. Projects must consider social equity, plan to serve an underserved
-              community and/or address a social issue within Sacramento to be awarded funding.
+              the Sacramento community.
             </p>
             <a class="btn btn-purple btn-rounded btn-md"><i class="fa fa-clone left"></i> More info coming soon! </a>
           </div>
