--- a/_includes/innovation-grants/program.html
+++ b/_includes/innovation-grants/program.html
@@ -16,12 +16,25 @@
 
       <i class="fa fa-book fa-3x purple-text"></i>
       <h5 class="font-weight-bold my-4">Read the Guidelines</h5>
-      <p class="grey-text mb-md-0 mb-5">Please read the guidelines before applying. If you have any questions, check out
-        the Workshops and FAQ.
+      <p class="grey-text mb-md-0 mb-5">Please read the guidelines before applying.
+        Guidelines refernce how to submit questions and workshop dates.
       </p>
       <a class="btn btn-purple" href=/pdf/{{page.reference}}.pdf>Program Guidelines</a>
     </div>
     <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-md-4">
+
+      <i class="fa fa-edit fa-3x purple-text"></i>
+      <h5 class="font-weight-bold my-4">Apply Now</h5>
+      <p class="grey-text mb-0">Check out the application page to find more details and
+        submit your application today!
+      </p>
+      <a class="btn btn-purple" href="{{page.link}}">Go to application!</a>
+
+    </div>
+    <!-- Grid Column -->
 
     <!-- Grid column -->
     <div class="col-md-4">
@@ -32,21 +45,10 @@
         Read through questions submitted by others and questions submitted during workshops. If your question
       is not already answered, submit online.
       </p>
-      <a class="btn btn-purple">Workshops & FAQ</a>
+      <a class="btn btn-purple" href="{{page.FAQ}}">Workshops & FAQ</a>
 
     </div>
     <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="col-md-4">
-
-      <i class="fa fa-edit fa-3x purple-text"></i>
-      <h5 class="font-weight-bold my-4">Apply Now</h5>
-      <p class="grey-text mb-0">Ready to submit your application?
-      </p>
-      <a class="btn btn-purple" href="{{page.link}}">Go to application!</a>
-
-    </div>
 
   </div>
   <!-- Grid row -->
