--- a/_includes/innovation-grants/program.html
+++ b/_includes/innovation-grants/program.html
@@ -40,12 +40,11 @@
     <div class="col-md-4">
 
       <i class="fa fa-comments-o fa-3x purple-text"></i>
-      <h5 class="font-weight-bold my-4">Workshops & FAQ</h5>
-      <p class="grey-text mb-md-0 mb-5">Find dates for upcoming workshops and links to recordings of past workshops.
-        Read through questions submitted by others and questions submitted during workshops. If your question
+      <h5 class="font-weight-bold my-4">FAQ</h5>
+      <p class="grey-text mb-md-0 mb-5">Read through questions submitted by others and questions submitted during workshops. If your question
       is not already answered, submit online.
       </p>
-      <a class="btn btn-purple" href="{{page.FAQ}}">Workshops & FAQ</a>
+      <a class="btn btn-purple" href="{{page.FAQ}}">Go to FAQ</a>
 
     </div>
     <!-- Grid column -->
