--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -33,6 +33,15 @@
                           {% endfor %}
                       </div>
                   </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Innovation Grants</a>
+                      <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="/innovation-grants">Overview</a>
+                        <a class="dropdown-item" href="/innovation-grants/ecosystem-building">Ecosystem Building</a>
+                        <a class="dropdown-item" href="">Marketing [Coming Soon!]</a>
+                        <a class="dropdown-item" href="">Competition [Coming Soon!]</a>
+                      </div>
+                  </li>
                   <li class="nav-item">
                       <a class="nav-link" href="https://twitter.com/innovatesac" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                   </li>
