--- a/_includes/innovation-grants/content.html
+++ b/_includes/innovation-grants/content.html
@@ -1,3 +1,4 @@
+<div class="container">
 <!-- Projects section v.4 -->
 <section class="text-center my-5">
 
@@ -113,3 +114,4 @@
 
 </section>
 <!-- Projects section v.4 -->
+</div>
