--- a/_includes/innovation-grants/program.html
+++ b/_includes/innovation-grants/program.html
@@ -1,3 +1,4 @@
+<div class="container">
 <!-- Section: Features v.2 -->
 <section class="text-center my-5">
 
@@ -54,3 +55,4 @@
 
 </section>
 <!-- Section: Features v.2 -->
+</div>
