--- a/_includes/team.html
+++ b/_includes/team.html
@@ -137,14 +137,16 @@
             </h3>
             <p>
                 <a class="font-weight-bold dark-grey-text">Content Strategist</a></p>
-            <p class="grey-text">Hi, my name is Aubree Taylor. I am informally known as a Cat Herder,
-              which means I chase around Louis and Ash and try to make everything make sense on the back end.
-              I am more formally known as content strategist and, with that, have other, more dangerous
-              cats to wrangle. I have been with the City of Sacramento since 2014 and got my start in the
-              Mayor's Office serving Sacramento through the lens of Constituent Affairs. I earned my bachelor
-              of science degree in Materials Science & Engineering from the University of California, Merced
-              in 2013 and have more recently turned my interests to Computer Science. I am very excited to see where
-              Sacramento is going and what ways I can help facilitate.</p>
+            <p class="grey-text">Aubree Taylor is an Administrative Technician with
+              the City of Sacramento’s Office of Innovation and Economic Development.
+              She manages the City’s SUTL Innovation Grant Program in addition to other
+              initiatives. Aubree has been with the City of Sacramento since 2014 and
+              got her start in Sacramento’s Mayor’s Office in Constituent Affairs. She
+              holds a BS in Materials Science & Engineering from the University of
+              California, Merced and, as a life-long learner, has studied Computer
+              Science at Sacramento City College. Aubree combines her love for public
+              service with a technical background to help grow the City’s innovation
+              ecosystem to reach long-overlooked communities.</p>
 
             <a class="btn btn-primary btn-md" href="https://twitter.com/aubreej9"><i class="fa fa-twitter"></i> @aubreej9</a>
         </div>
