EG Landing Page

--- a/_includes/economic-gardening/intro.html
+++ b/_includes/economic-gardening/intro.html
@@ -1,28 +1,13 @@
-<div class="jumbotron jumbotron-fluid" style="background-image: url(/img/sutl-bknd.jpg);">
-  <div class="full-bg-img">
-  <div class="container flex-center">
-    <div class="row">
-      <div class="col">
-      <h2 class="display-4">Fluid jumbotron</h2>
-      <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-    </div>
-    </div>
-    </div>
-  </div>
-  </div>
-</div>
-
-<!-- Intro Section -->
-<div class="view hm-black-light jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url(/img/sutl-bknd.jpg);">
-  <div class="full-bg-img">
-      <div class="container flex-center">
-          <div class="row pt-5 mt-3">
-              <div class="col-md-12">
-                  <div>
-
-                  </div>
-              </div>
-          </div>
-      </div>
+<div class="jumbotron" style="background-image: url(/img/sutl-bknd.jpg);">
+  <div class="container py-5">
+    <h2 class="display-4 white-text">Economic Gardening 2.0</h2>
+    <p class="lead white-text">City of Sacramento Economic Gardening Program</p>
+    <hr class="my-4">
+    <h5 class="white-text">The City of Sacramento is excited to launch Economic
+      Gardening 2.0, a new economic development pilot program designed to provide
+      sophisticated, tailor-made technical assistance to local, second-stage companies
+      poised for growth in the City of Sacramento. The City will be partnering with
+      the National Center for Economic Gardening (NCEG), a national organization
+      that supports entrepreneurship.</h5>
   </div>
 </div>
