--- a/_layouts/economic-gardening.html
+++ b/_layouts/economic-gardening.html
@@ -3,3 +3,6 @@ layout: default
 ---
 
 {% include economic-gardening/intro.html %}
+{% include economic-gardening/content.html %}
+{% include economic-gardening/info-boxes.html %}
+{% include economic-gardening/action.html %}
