--- a/_includes/economic-gardening/content.html
+++ b/_includes/economic-gardening/content.html
@@ -9,6 +9,7 @@
             of Sacramento’s economy and the definition of economic growth and prosperity.
             Focusing our efforts on these companies means strengthening the economy
             of the region and supporting the entrepreneurs who live among us. </p>
+            <a href="/pdf/economic-gardening.pdf" class="indigo-text d-flex justify-content-end"><h5><i class="fa fa-angle-double-right"></i>View One-Pager<i class="fa fa-angle-double-left"></i></h5></a>
           </div>
         </div>
       </div>
