--- a/_includes/economic-gardening/intro.html
+++ b/_includes/economic-gardening/intro.html
@@ -3,7 +3,7 @@
     <h2 class="display-4 white-text">Economic Gardening 2.0</h2>
     <p class="lead white-text">City of Sacramento Economic Gardening Program</p>
     <hr class="my-4">
-    <h5 class="white-text">The City of Sacramento is excited to launch Economic
+    <h5 class="white-text">The Office of Innovation and Economic Development is excited to launch Economic
       Gardening 2.0, a new economic development pilot program designed to provide
       sophisticated, tailor-made technical assistance to local, second-stage companies
       poised for growth in the City of Sacramento. The City will be partnering with
