--- a/_includes/economic-gardening/info-boxes.html
+++ b/_includes/economic-gardening/info-boxes.html
@@ -19,13 +19,13 @@
       <hr>
       <!-- Quotation -->
       <p>We will offer this program to a select group of companies. There will be
-        two separate one-year cohorts of five to seven companies each. Companies
-        will receive 36 hours of services from the team of the National Center for
-        Economic Gardening. The best way to describe the national team is to compare
-        them to a high-powered staff on loan to the CEO for a few weeks. The specialist
-        team consists of seasoned researchers that leverage sophisticated corporate
-        databases, GIS systems, SEO and Web marketing tools that provide the CEO
-        with information, data and conclusions about key issues with which he/she is dealing.</p>
+        two separate one-year seven-company cohorts. Companies will receive 36 hours
+        of services from the team of the National Center for Economic Gardening.
+        The best way to describe the national team is to compare them to a high-powered
+        staff on loan to the CEO for a few weeks. The specialist team consists of
+        seasoned researchers that leverage sophisticated corporate databases, GIS
+        systems, SEO and Web marketing tools that provide the CEO with information,
+        data and conclusions about key issues with which he/she is dealing.</p>
     </div>
 
   </div>
@@ -51,9 +51,13 @@
       <!-- Quotation -->
       <p>The City of Sacramento will pay the $4,290 for the initial 36 hours of
         services provided by the National Center for Economic Gardening.</p>
-      <p>The City is also redefining the traditional Economic Gardening approach
-        by adding a 1:1 grant program match to implement the recommendations companies
-        receive from engaging the National Center for Economic Gardening specialist.</p>
+      <p>Once the company completes the 36 hours, They have the option to act on
+        the findings in order to grow the business by addressing identified pain
+        points. There are costs associated with growing any business. This is where
+        the City is redefining the traditional Economic Gardening approach by offering
+        a chance for the company to apply for a one-time grant program up to $50,000
+        to implement the recommendations companies receive from engaging the National
+        Center for Economic Gardening specialist.</p>
     </div>
 
   </div>
@@ -113,7 +117,7 @@
       <p>To apply for this program. Your business must meet the following eligibility criteria:</p>
       <li>Be a for-profit, privately held company headquartered and operating in the City of Sacramento</li>
       <li>Have between $1 million and $50 million in annual revenue </li>
-      <li>Employ at least 10 but no more than 100 employees (including the owner)</li>
+      <li>Employ at least 5 but no more than 99 employees (including the owner)</li>
       <li>Demonstrate growth in employment and/or revenue for at least 2 of the past 5 years</li>
       <p><i>Note: Retail, restaurant establishments do not qualify for this program.</i></p>
     </div>
