navbar & email list

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
                     <!--GitHub-->
                     <a href="https://github.com/innovatesac" target="_blank" class="icons-sm pin-ic"><i class="fa fa-github fa-lg white-text mr-md-4"> </i></a>
                     <!--Mailchimp-->
-                    <a href="http://innovatesac.us15.list-manage.com/subscribe?u=506d23799a1d11fb0dbbb39a5&id=2479332284" target="_blank"><i class="fa fa-envelope fa-lg white-text mr-md-4" aria-hidden="true"></i></a>
+                    <a href="https://res.updates.cityofsacramento.org/lp/landingPageCitySubscriptionEmail?service=%40-UXq1D1A_xAqdVh0jTfUEeh9wj5eYsAP_n7BolXQeVRzsn_Ok5eebG9CM7o5FVW9txb0Nef6Bl4ganzKupTfS1LG6YRvwxZ6ZoBP22va3tytQVFT" target="_blank"><i class="fa fa-envelope fa-lg white-text mr-md-4" aria-hidden="true"></i></a>
 
                 </div>
             </div>
