--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -34,12 +34,10 @@
                       </div>
                   </li>
                   <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Innovation Grants</a>
+                      <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Innovation Programs</a>
                       <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/innovation-grants">Overview</a>
-                        <a class="dropdown-item" href="/innovation-grants/ecosystem-building">Ecosystem Building</a>
-                        <a class="dropdown-item" href="">Marketing [Coming Soon!]</a>
-                        <a class="dropdown-item" href="">Competition [Coming Soon!]</a>
+                        <a class="dropdown-item" href="/innovation-grants">Innovation Grants</a>
+                        <a class="dropdown-item" href="/economic-gardening">Economic Gardening 2.0</a>
                       </div>
                   </li>
                   <li class="nav-item">
