--- a/_includes/economic-gardening/info-boxes.html
+++ b/_includes/economic-gardening/info-boxes.html
@@ -119,6 +119,8 @@
       <li>Have between $1 million and $50 million in annual revenue </li>
       <li>Employ at least 5 but no more than 99 employees (including the owner)</li>
       <li>Demonstrate growth in employment and/or revenue for at least 2 of the past 5 years</li>
+      <li>Sells or exports to markets outside of Sacramento</li>
+      <p></p>
       <p><i>Note: Retail, restaurant establishments do not qualify for this program.</i></p>
     </div>
 
