--- a/_includes/economic-gardening/action.html
+++ b/_includes/economic-gardening/action.html
@@ -5,7 +5,7 @@
       information is confidential.</p>
     <p class="lead">Deadline for submission is December 2, 2019 by close of business.
       Awardees will be selected and announced second week of January 2020.</p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Application opens soon!</a>
+    <a class="btn btn-primary btn-lg" href="/application" role="button">Application opens soon!</a>
     <hr class="my-4">
     <p></p>
     <h5>For more information about the National Center for Economic Gardening,
@@ -13,4 +13,4 @@
   </div>
 </div>
 
-<!-- Application link:/application -->
+<!-- Application link: -->
