--- a/_includes/economic-gardening/intro.html
+++ b/_includes/economic-gardening/intro.html
@@ -1,9 +1,14 @@
-<div class="jumbotron" style="background-image: url(/img/sutl-bknd.jpg);">
+<div class="jumbotron jarallax" style="background-image: url(/img/sutl-bknd-eg.jpg);">
   <div class="container py-5">
-    <h2 class="display-4 white-text">Economic Gardening 2.0</h2>
-    <p class="lead white-text">City of Sacramento Economic Gardening Program</p>
+  </div>
+</div>
+
+<div class="container py-3">
+  <div class="jumbotron">
+    <h2 class="display-4">Economic Gardening 2.0</h2>
+    <p>City of Sacramento Economic Gardening Program</p>
     <hr class="my-4">
-    <h5 class="white-text">The Office of Innovation and Economic Development is excited to launch Economic
+    <h5>The Office of Innovation and Economic Development is excited to launch Economic
       Gardening 2.0, a new economic development pilot program designed to provide
       sophisticated, tailor-made technical assistance to local, second-stage companies
       poised for growth in the City of Sacramento. The City will be partnering with
