--- a/_includes/innovation-grants/intro.html
+++ b/_includes/innovation-grants/intro.html
@@ -5,11 +5,11 @@
           <div class="row pt-5 mt-3">
               <div class="col-md-12">
                   <div>
-                      <h1 class="h1-reponsive white-text font-up font-bold mb-3 wow fadeInDown" data-wow-delay="0.3s"><strong>SUTL Innovation Grants</strong></h1>
+                      <h1 class="h1-reponsive white-text font-up font-bold mb-3 wow fadeInDown" data-wow-delay="0.3s"><strong>Sacramento Urban Technology Lab (SUTL) Innovation Grants</strong></h1>
                       <hr class="hr-light mt-4 wow fadeInDown" align="left" data-wow-delay="0.4s">
                       <h3 class="font-up mb-5 white-text wow fadeInDown" data-wow-delay="0.4s"><i>DISCOVER.LAUNCH.SCALE</i></h3>
                       <h5 class="font-up mb-5 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Catalyzing innovation in the startup community and preparing Sacramento for the industries of the future</strong></h5>
-                      <!--a href="/stories" target="_blank" class="btn btn-outline-white btn-lg wow fadeInDown" data-wow-delay="0.4s"><i class="fa fa-bullhorn" aria-hidden="true"></i> Tell Us Your Story</a-->
+                      <a href="/about/sutl" target="_blank" class="btn btn-outline-white btn-lg wow fadeInDown" data-wow-delay="0.4s"><i class="fa fa-bullhorn" aria-hidden="true"></i>  What is SUTL?</a>
                       <!-- a href="/partner" target="_blank" class="btn btn-outline-white btn-lg wow fadeInDown" data-wow-delay="0.4s"><i class="fa fa-rocket" aria-hidden="true"></i> Partner with Us</a-->
                   </div>
               </div>
