landing page from nav bar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -50,7 +50,7 @@
                       <a class="nav-link" href="https://github.com/innovatesac" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="http://innovatesac.us15.list-manage.com/subscribe?u=506d23799a1d11fb0dbbb39a5&id=2479332284" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                    <a class="nav-link" href="https://res.updates.cityofsacramento.org/lp/landingPageCitySubscriptionEmail?service=%40-UXq1D1A_xAqdVh0jTfUEeh9wj5eYsAP_n7BolXQeVRzsn_Ok5eebG9CM7o5FVW9txb0Nef6Bl4ganzKupTfS1LG6YRvwxZ6ZoBP22va3tytQVFT" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
                   </li>
                 </ul>
             </div>
