--- a/_includes/faqpg.html
+++ b/_includes/faqpg.html
@@ -3,23 +3,46 @@
 
   <!-- Card image -->
   <div class="view overlay rounded-top">
-    <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(134).jpg" class="img-fluid" alt="Sample image">
+    <img src="/img/{{page.image}}" class="img-fluid" alt="Sample image">
     <a href="#">
       <div class="mask rgba-white-slight"></div>
     </a>
   </div>
 
-  <!-- Card content -->
-  <div class="card-body text-center mb-3">
+  </div>
+  <!-- Jumbotron -->
 
-    <!-- Title -->
-    <h3 class="card-title h3 my-4"><strong>Card title</strong></h3>
-    <!-- Text -->
-    <p class="card-text py-2">Some quick example text to build on the card title and make up the bulk of the card's</p>
-    <!-- Button -->
-    <a href="#" class="btn purple-gradient btn-rounded mb-4">Button</a>
+<div class="container">
+
+  <!--Accordion wrapper-->
+<div class="accordion md-accordion" id="accordionEx1" role="tablist" aria-multiselectable="true">
+
+  <!-- Accordion card -->
+  <div class="card">
+
+    {% for faq in site.data.{{page.questions}} %}
+    <!-- Card header -->
+    <div class="card-header" role="tab" id="headingTwo1">
+      <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx1" href="#collapseTwo1"
+        aria-expanded="false" aria-controls="collapseTwo1">
+        <h5 class="mb-0">
+          {{faq.question}} <i class="fas fa-angle-down rotate-icon"></i>
+        </h5>
+      </a>
+    </div>
+
+    <!-- Card body -->
+    <div id="collapseTwo1" class="collapse" role="tabpanel" aria-labelledby="headingTwo1"
+      data-parent="#accordionEx1">
+      <div class="card-body">
+        {{faq.answer}}
+      </div>
+    </div>
 
   </div>
+  <!-- Accordion card -->
+  {% endfor %}
 
 </div>
-<!-- Jumbotron -->
+<!-- Accordion wrapper -->
+</div>
